# prun

./: .gitignore  .gitmodules  README.md  apptainer.conf  environment.yml  flake.nix  generate_table.py  pyproject.toml  requirements.txt
launch/: 2ssp.sh  activations_diff.slurm  calibration_analysis.slurm  cola.sh  cola.slurm  distribution.slurm  eval.sh  eval.slurm  eval_awq.sh  first_layers.slurm  flow.slurm  intersection.slurm  job.slurm  parallel.slurm  perplexity.slurm  plotter.slurm  pval.slurm  scalability.slurm  similarity.slurm  spectral.slurm
plot/: first_layers_plot.py  intersection_plot.py  scalability_plot.py  token_distribution.py  variance_plots.py  wanda_evolution_plot.py
results/: summary.md
results/reorganized/: Qwen-Qwen3-1.7B_ns128.md  Qwen-Qwen3-8B_ns1024.0.md  Qwen-Qwen3-8B_ns1024.md  Qwen-Qwen3-8B_ns128.0.md  Qwen-Qwen3-8B_ns128.md  Qwen-Qwen3-8B_ns512.0.md  Qwen-Qwen3-8B_ns512.md  google-gemma-7b_ns1024.0.md  google-gemma-7b_ns1024.md  google-gemma-7b_ns128.0.md  google-gemma-7b_ns128.md  google-gemma-7b_ns512.0.md  google-gemma-7b_ns512.md  (+6 more)
source/: __init__.py  calibr_analysis.py  compare_activations.py  data.py  eval.py  eval_cola.py  eval_perplexity.py  eval_thesis.py  first_layers_analysis.py  flow_analysis.py  intersection_test.py  nsamples_ablation.py  pick_pieces_datasets.py  plot_pvalues.py  prune.py  pvalues_test.py  reorganize_results.py  run_experiment.py  sampling_analysis.py  scalability_test.py  similarity_check.py  spectral_analysis.py  summarize_results.py  wanda_analysis.py  wanda_sampling_diff.py  window_length.py
(+44 files in other folders)
